@@ -183,6 +183,7 @@
 	* tools/zipme.sh: Force directory name to be nuttx-xx.yy.zz
 	* fs/fs_opendir.c: Correct errors in semaphore usage that can cause deadlock.
 	* lib/lib_getopt.c: Added getopt() support
-	* examples/nsh:  NSH now supports mount, umount, and mkdir.
+	* examples/nsh:  NSH now supports cat, mount, umount, and mkdir.  ls supports
+          -l -s, and -R
 	* Started m68322
 
